--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,20 @@
 
 export(autogluon_pred)
 export(check_gep_dat)
+export(convert_kallisto)
+export(convert_salmon)
 export(download_model_data)
 export(get_model_data)
 export(xgboost_pred)
+import(BiocParallel)
+import(DESeq2)
+import(tximport)
 import(xgboost)
 importFrom(data.table,fread)
 importFrom(data.table,fwrite)
+importFrom(parallel,detectCores)
 importFrom(reticulate,use_condaenv)
+importFrom(rtracklayer,import)
 importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace_all)
