--- a/conda_env.yml
+++ b/conda_env.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - bioconda
   - defaults
+  - bioconductor
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
@@ -10,6 +11,25 @@ dependencies:
   - _r-xgboost-mutex=2.0=cpu_0
   - binutils_impl_linux-64=2.36.1=h193b22a_1
   - binutils_linux-64=2.36=hf3e587d_33
+  - bioconductor-annotate=1.68.0=r40hdfd78af_1
+  - bioconductor-annotationdbi=1.52.0=r40hdfd78af_1
+  - bioconductor-biobase=2.50.0=r40hd029910_1
+  - bioconductor-biocgenerics=0.36.0=r40hdfd78af_1
+  - bioconductor-biocparallel=1.24.1=r40h399db7b_0
+  - bioconductor-delayedarray=0.16.3=r40hd029910_0
+  - bioconductor-deseq2=1.30.1=r40h399db7b_0
+  - bioconductor-genefilter=1.72.0=r40hc6cf775_0
+  - bioconductor-geneplotter=1.68.0=r40hdfd78af_1
+  - bioconductor-genomeinfodb=1.26.4=r40hdfd78af_0
+  - bioconductor-genomeinfodbdata=1.2.4=r40hdfd78af_2
+  - bioconductor-genomicranges=1.42.0=r40hd029910_1
+  - bioconductor-iranges=2.24.1=r40hd029910_0
+  - bioconductor-matrixgenerics=1.2.1=r40hdfd78af_0
+  - bioconductor-s4vectors=0.28.1=r40hd029910_0
+  - bioconductor-summarizedexperiment=1.20.0=r40hdfd78af_1
+  - bioconductor-tximport=1.18.0=r40hdfd78af_1
+  - bioconductor-xvector=0.30.0=r40hd029910_1
+  - bioconductor-zlibbioc=1.36.0=r40hd029910_1
   - bwidget=1.9.14=ha770c72_0
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.17.1=h7f98852_1
@@ -39,8 +59,8 @@ dependencies:
   - krb5=1.17.2=h926e7f8_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_1
   - lerc=2.2.1=h9c3ff4c_0
-  - libblas=3.9.0=8_openblas
-  - libcblas=3.9.0=8_openblas
+  - libblas=3.8.0=11_h6e990d7_netlib
+  - libcblas=3.8.0=11_h6e990d7_netlib
   - libcurl=7.76.1=hc4aaa36_1
   - libdeflate=1.7=h7f98852_5
   - libedit=3.1.20191231=he28a2e2_2
@@ -53,7 +73,7 @@ dependencies:
   - libglib=2.68.3=h3e27bee_0
   - libgomp=9.3.0=h2828fa1_19
   - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=8_openblas
+  - liblapack=3.8.0=11_h6e990d7_netlib
   - libnghttp2=1.43.0=h812cca2_0
   - libopenblas=0.3.12=pthreads_hb3c22a3_1
   - libpng=1.6.37=h21135ba_2
@@ -83,17 +103,24 @@ dependencies:
   - r-backports=1.2.1=r40hcfec24a_0
   - r-base=4.0.2=he766273_1
   - r-base64enc=0.1_3=r40hcfec24a_1004
+  - r-bh=1.75.0_0=r40hc72bb7e_0
+  - r-bit=4.0.4=r40hcfec24a_0
+  - r-bit64=4.0.5=r40hcfec24a_0
+  - r-bitops=1.0_7=r40hcfec24a_0
+  - r-blob=1.2.2=r40hc72bb7e_0
   - r-brew=1.0_6=r40hc72bb7e_1003
   - r-brio=1.1.2=r40hcfec24a_0
   - r-callr=3.7.0=r40hc72bb7e_0
   - r-cli=3.0.1=r40h03ef668_1
   - r-clipr=0.7.1=r40hc72bb7e_0
+  - r-colorspace=2.0_2=r40hcfec24a_0
   - r-commonmark=1.7=r40hcfec24a_1002
   - r-covr=3.5.1=r40h03ef668_0
   - r-crayon=1.4.1=r40hc72bb7e_0
   - r-crosstalk=1.1.1=r40hc72bb7e_0
   - r-curl=4.3.2=r40hcfec24a_0
   - r-data.table=1.14.0=r40hcfec24a_0
+  - r-dbi=1.1.1=r40hc72bb7e_0
   - r-desc=1.3.0=r40hc72bb7e_0
   - r-devtools=2.4.2=r40hc72bb7e_0
   - r-diffobj=0.3.4=r40hcfec24a_0
@@ -102,33 +129,49 @@ dependencies:
   - r-ellipsis=0.3.2=r40hcfec24a_0
   - r-evaluate=0.14=r40hc72bb7e_2
   - r-fansi=0.5.0=r40hcfec24a_0
+  - r-farver=2.1.0=r40h03ef668_0
+  - r-formatr=1.11=r40hc72bb7e_0
   - r-fs=1.5.0=r40h03ef668_0
+  - r-futile.logger=1.4.3=r40hc72bb7e_1003
+  - r-futile.options=1.0.1=r40hc72bb7e_1002
+  - r-ggplot2=3.3.5=r40hc72bb7e_0
   - r-gh=1.3.0=r40hc72bb7e_0
   - r-git2r=0.28.0=r40hf628c3e_0
   - r-gitcreds=0.1.1=r40hc72bb7e_0
   - r-glue=1.4.2=r40hcfec24a_0
+  - r-gtable=0.3.0=r40hc72bb7e_3
   - r-highr=0.9=r40hc72bb7e_0
   - r-htmltools=0.5.1.1=r40h03ef668_0
   - r-htmlwidgets=1.5.4=r40hc72bb7e_0
   - r-httr=1.4.2=r40hc72bb7e_0
   - r-ini=0.3.1=r40hc72bb7e_1003
+  - r-isoband=0.2.5=r40h03ef668_0
   - r-jquerylib=0.1.4=r40hc72bb7e_0
   - r-jsonlite=1.7.2=r40hcfec24a_0
   - r-knitr=1.34=r40hc72bb7e_0
+  - r-labeling=0.4.2=r40hc72bb7e_0
+  - r-lambda.r=1.2.4=r40hc72bb7e_1
   - r-later=1.2.0=r40h03ef668_0
   - r-lattice=0.20_44=r40hcfec24a_0
   - r-lazyeval=0.2.2=r40hcfec24a_2
   - r-lifecycle=1.0.0=r40hc72bb7e_0
+  - r-locfit=1.5_9.4=r40hcfec24a_1
   - r-magrittr=2.0.1=r40hcfec24a_1
   - r-markdown=1.1=r40hcfec24a_1
+  - r-mass=7.3_54=r40hcfec24a_0
   - r-matrix=1.3_4=r40he454529_0
+  - r-matrixstats=0.60.0=r40hcfec24a_0
   - r-memoise=1.1.0=r40h6115d3f_1004
+  - r-mgcv=1.8_36=r40he454529_0
   - r-mime=0.11=r40hcfec24a_0
+  - r-munsell=0.5.0=r40hc72bb7e_1003
+  - r-nlme=3.1_150=r40h31ca83e_0
   - r-openssl=1.4.4=r40he36bf35_0
   - r-pillar=1.6.2=r40hc72bb7e_0
   - r-pkgbuild=1.2.0=r40hc72bb7e_0
   - r-pkgconfig=2.0.3=r40hc72bb7e_1
   - r-pkgload=1.2.1=r40h03ef668_0
+  - r-plogr=0.2.0=r40hc72bb7e_1003
   - r-praise=1.0.0=r40hc72bb7e_1004
   - r-prettyunits=1.1.1=r40hc72bb7e_1
   - r-processx=3.5.2=r40hcfec24a_0
@@ -137,31 +180,41 @@ dependencies:
   - r-purrr=0.3.4=r40hcfec24a_1
   - r-r6=2.5.1=r40hc72bb7e_0
   - r-rcmdcheck=1.3.3=r40hc72bb7e_3
+  - r-rcolorbrewer=1.1_2=r40h785f33e_1003
   - r-rcpp=1.0.7=r40h03ef668_0
+  - r-rcpparmadillo=0.10.6.0.0=r40h306847c_0
+  - r-rcurl=1.98_1.3=r40hcfec24a_0
   - r-rematch2=2.1.2=r40hc72bb7e_1
   - r-remotes=2.4.0=r40hc72bb7e_0
   - r-rex=1.2.0=r40hc72bb7e_1
   - r-rlang=0.4.11=r40hcfec24a_0
   - r-roxygen2=7.1.1=r40h03ef668_0
   - r-rprojroot=2.0.2=r40hc72bb7e_0
+  - r-rsqlite=2.2.5=r40h03ef668_0
   - r-rstudioapi=0.13=r40hc72bb7e_0
   - r-rversions=2.1.1=r40hc72bb7e_0
+  - r-scales=1.1.1=r40hc72bb7e_0
   - r-sessioninfo=1.1.1=r40hc72bb7e_1002
+  - r-snow=0.4_3=r40hc72bb7e_1002
   - r-stringi=1.5.3=r40hca8494e_0
   - r-stringr=1.4.0=r40hc72bb7e_2
+  - r-survival=3.2_11=r40hcfec24a_0
   - r-sys=3.4=r40hcfec24a_0
   - r-testthat=3.0.4=r40h03ef668_0
   - r-tibble=3.1.3=r40hcfec24a_0
   - r-usethis=1.6.3=r40h6115d3f_0
   - r-utf8=1.2.2=r40hcfec24a_0
   - r-vctrs=0.3.8=r40hcfec24a_1
+  - r-viridislite=0.4.0=r40hc72bb7e_0
   - r-waldo=0.3.0=r40hc72bb7e_0
   - r-whisker=0.4=r40hc72bb7e_1
   - r-withr=2.4.2=r40hc72bb7e_0
   - r-xfun=0.24=r40h03ef668_0
   - r-xgboost=1.4.0=r40h9c3ff4c_0
+  - r-xml=3.99_0.6=r40hcfec24a_0
   - r-xml2=1.3.2=r40h03ef668_1
   - r-xopen=1.0.0=r40hc72bb7e_1003
+  - r-xtable=1.8_4=r40hc72bb7e_3
   - r-yaml=2.2.1=r40hcfec24a_1
   - readline=8.1=h46c0cb4_0
   - sed=4.8=he412f7d_0
