--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,11 @@ import(BiocParallel)
 import(DESeq2)
 import(tximport)
 import(xgboost)
+importFrom(R.utils,gunzip)
 importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(parallel,detectCores)
 importFrom(reticulate,use_condaenv)
-importFrom(rtracklayer,import)
 importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace_all)
